# Narikiri-Dungeon-X

./: .gitignore  README.md  pyproject.toml
2_translated/maps/: _test00.xml  _test01.xml  _test02.xml  _test03.xml  _test04.xml  apa_t00.xml  arc_d00.xml  arc_d01.xml  arc_d02.xml  arc_d03.xml  arc_d04.xml  arc_d05.xml  bur_d00.xml  bur_d01.xml  bur_d02.xml  bur_d03.xml  bur_d04.xml  bur_d05.xml  bur_d06.xml  bur_d07.xml  bur_d08.xml  bur_d09.xml  bur_d10.xml  bur_d12.xml  bur_d13.xml  bur_d14.xml  bur_d15.xml  bur_d16.xml  bur_d18.xml  bur_d19.xml  con_d00.xml  con_d01.xml  con_d02.xml  con_d03.xml  con_d04.xml  con_d05.xml  con_d06.xml  con_d07.xml  con_d09.xml  con_d10.xml  (+290 more)
2_translated/menu/: Artes.xml  Common.xml  Costume.xml  Debug_Room.xml  EBOOT.xml  Help.xml  Items.xml  Map.xml  Memo.xml  Skills.xml  Strategy.xml
2_translated/sidequest/: sb_010_010.xml  sb_010_020.xml  sb_010_030.xml  sb_010_040.xml  sb_010_050.xml  sb_020_010.xml  sb_030_010.xml  sb_030_020.xml  sb_030_030.xml  sb_039_010.xml  sb_039_030.xml  sb_039_040.xml  sb_039_050.xml  sb_040_010.xml  sb_040_020.xml  sb_040_030.xml  sb_050_010.xml  sb_050_020.xml  sb_050_030.xml  sb_060_010.xml  sb_060_020.xml  sb_060_030.xml  sb_060_040.xml  sb_070_010.xml  sb_080_010.xml  sb_080_020.xml  sb_080_030.xml  sb_090_010.xml  sb_090_020.xml  sb_090_030.xml  sb_130_010.xml  sb_130_020.xml  sb_140_010.xml  sb_140_020.xml  sb_140_040.xml  sb_140_050.xml  sb_140_060.xml  sb_140_070.xml  sb_150_010.xml  sb_160_010.xml  (+76 more)
2_translated/skits/: ct_001_001.xml  ct_001_002.xml  ct_001_003.xml  (+198 more)
project/: hashes.json
(+426 files in other folders)
